chapter-07/cluster-apk8s-dev5/003-data/070-minio/50-cluster.yml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: data
spec:
  type: ClusterIP
  selector:
    app: minio
    objectstore: minio
  ports:
    - name: http-minio
      port: 9000
      targetPort: 9000
      protocol: TCP
